<resources>
    <string name="app_name">Ssing</string>


    <string name="title_drawer_toggle_open_desc">메뉴가 열렸습니다.</string>
    <string name="title_drawer_toggle_close_desc">메뉴가 닫혔습니다.</string>


    <string-array name="titles_main_tab">
        <item>최신</item>
        <item>활동내역</item>
    </string-array>


    <string name="title_empty_comment">등록된 댓글이 없습니다.</string>
    <string name="title_empty_post_list">등록된 글이 없습니다.</string>
    <string name="title_empty_post_list_search">검색결과가 없습니다.</string>
    <string name="title_empty_post_list_activity">활동내역이 없습니다.</string>
    <string name="title_sign_up_facebook">Facebook으로 시작하기</string>
    <string name="title_sign_up_kakao">카카오톡으로 시작하기</string>
    <string name="format_vote_count">참여 %1$d개</string>
    <string name="format_birth">%2d년</string>
    <string name="title_sign_up">회원가입</string>
    <string name="title_prev">이전</string>
    <string name="title_next">다음</string>
    <string name="title_finish">완료</string>
    <string name="title_logout">로그아웃</string>


    <string name="title_hint_input_nick">닉네임을 입력해주세요.</string>
    <string name="title_footer_terms">회원가입을 하시면 해당 서비스의 이용약관에 \n동의한 것으로 간주됩니다.</string>
    <string name="title_finish_sign_up">회원가입이 완료되었습니다.</string>
    <string name="title_login_success">로그인 되었습니다.</string>
    <string name="title_logout_success">로그아웃 되었습니다.</string>
    <string name="title_ask_app_exit">한번 더 누르면 앱이 종료됩니다.</string>

    <string name="title_button_post">글쓰기</string>
    <string name="title_button_my_activity">활동내역</string>
    <string name="title_button_my_settings">설정</string>
    <string name="title_button_start">시작하기</string>

    <string name="kakao_app_key">7ccf8f2cd9d5be9810682bc39ce6f38c</string>
    <string name="facebook_app_id">1262392927152805</string>
    <string name="title_add_comment"># 댓글작성하기</string>
    <string name="title_tag_prefix">#</string>
    <string name="title_timeline">타임라인</string>
    <string name="title_finish_vote_format">%1$s 태그를 추천히였습니다.</string>
    <string name="title_post_detail_header">%1$s님의 글</string>
    <string name="title_add_post">글 작성</string>
    <string name="title_tag_settings">태그설정</string>
    <string name="title_add_post_body_hint">내용을 입력하세요</string>
    <string name="title_hashtag">#</string>
    <string name="title_finish_adding_comment">댓글이 등록되었습니다</string>
    <string name="title_finish_adding_post">글이 등록되었습니다</string>
    <string name="title_tag_settings_info">* 해쉬태그를 클릭/롱클릭/드래그하여 설정을 변경할수 있어요.</string>
    <string name="title_search_body_hint">검색어를 입력하세요</string>
    <string name="title_search_hashtag_hint">해쉬태그를 입력하세요(# 빼고입력)</string>
    <string name="title_search">검색</string>
    <string name="title_search_option">검색 옵션</string>
    <string name="title_search_option_body">검색어</string>
    <string name="title_search_option_hashtag">해쉬태그</string>

    <string name="title_tag_setting_add_image">이미지 추가</string>
    <string name="title_tag_setting_remove_image">이미지 삭제</string>
    <string name="title_tag_setting_remove_tag">태그 삭제</string>
    <string name="title_required_login">로그인 후 이용하실 수 있습니다.</string>


</resources>
