<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/tag_settings_add_image_button"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/title_tag_setting_add_image"
        android:textColor="@color/colorPrimaryText"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/tag_settings_remove_image_button"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/title_tag_setting_remove_image"
        android:textColor="@color/colorPrimaryText"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/tag_settings_remove_tag_button"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/title_tag_setting_remove_tag"
        android:textColor="@color/colorPrimaryText"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>