<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="slogup.ssing.Activity.PostSearchActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <android.support.v7.widget.SearchView
            android:id="@+id/post_search_search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="@string/title_search_body_hint"
            app:searchIcon="@null"/>

    </android.support.v7.widget.Toolbar>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_search_option"
        android:textColor="@color/colorPrimaryText"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <Button
            android:id="@+id/post_search_option_body_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_gender_btn"
            android:minHeight="0dp"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="@string/title_search_option_body"
            android:textColor="@drawable/selector_gender_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/post_search_option_hashtag_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_gender_btn"
            android:drawablePadding="8dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="@string/title_search_option_hashtag"
            android:textColor="@drawable/selector_gender_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/post_search_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"/>


</LinearLayout>
