<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@color/colorDarkGrey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:visibility="visible"
                android:id="@+id/main_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/selector_sign_up_btn"
                android:text="@string/title_button_start"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/main_logged_in_container"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_nick_textview"
                    android:textStyle="bold"
                    tools:text = "sngjoong"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/main_logout_button"
                    android:textColor="@color/colorWhite"
                    android:text="@string/title_logout"
                    android:textSize="12sp"
                    android:background="@drawable/selector_logout_btn"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"/>

            </LinearLayout>



        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorDivider"/>


        <Button
            android:id="@+id/main_my_activity_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title_button_my_activity"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/main_add_post_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_button_post"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/main_settings_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_button_my_settings"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>